tests/compile_fail/endpoint_authorize_jwt_public.stderr
error: Cannot use #[acube_authorize(public)] with #[acube_security(jwt)]. Use #[acube_security(none)] for public endpoints.
 --> $WORKSPACE/tests/compile_fail/endpoint_authorize_jwt_public.rs
  |
  | async fn test_handler(_ctx: AcubeContext) -> AcubeResult<Json<serde_json::Value>, Never> {
  |          ^^^^^^^^^^^^
